Fix the error mappings generated